@@ -1,3 +1,9 @@
+2023-12-20T04:09:10Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7270865685 # 4365
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2023-12-20
+* notice: query file size: 24319
+* notice: accum prev / next / diff: re vi: 0 211 / 0 213 / +0 +2
+
 2023-12-20T00:34:52Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7269311671 # 4364
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2023-12-20
